# ub-review

./: .gitattributes  .gitignore  .ub-review.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_GH_RUNNER.md  REPO_READY.md  action.yml  clippy.toml  codecov.yml  justfile  ripr.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release-notes.md
.ripr/: suppressions.toml
configs/: bun-gh-runner.toml  ub-review.example.toml  unsafe-review-swarm.ub-review.toml
docs/: ACTION_CONSUMER_BUN.md  ADOPTION_ADVISORY.md  ADOPTION_MODES.md  ARCHITECTURE.md  BASELINE_SELECTION.md  BOX_PROFILES.md  BUN_UB_HUNT.md  CARGO_ALLOW_LEDGER.md  CI_AUDIT_WIZARD.md  CLIPPY_POLICY.md  CODEX_FINISH.md  DROID_ACTION_INTEGRATION.md  FILE_POLICY.md  GH_RUNNER_BUN.md  GH_RUNNER_SETUP.md  INIT_ALIGN.md  NO_PANIC_POLICY.md  POLICY_ALLOWLISTS.md  PORTING_BASELINE.md  PRODUCT_BRIEF.md  PRODUCT_STATE.md  PROMPT_PREFIX_CACHING.md  QUICKSTART.md  RELEASE_PATH.md  RELEASE_RUNBOOK.md  REPO_BOOTSTRAP.md  REPO_OPERATING_HANDOFF.md  REPO_STYLE.md  REQUIREMENTS.md  REVIEW_BODY_CONTRACT.md  REVIEW_EXPERIENCE_FIXTURES.md  REVIEW_FAST.md  REVIEW_LEDGER.md  ROADMAP.md  RUNNER_IMAGE.md  RUNTIME_PROFILES.md  RUST_REPO_STYLE.md  SENSOR_ROUTING.md  SOURCE_EXCEPTION_LEDGER.md  STYLE.md  (+4 more)
examples/: cx23-first-run.sh
policy/: allow.toml  cargo-allow.toml  ci-budget.toml  ci-exceptions.toml  ci-lane-whitelist.toml  ci-lanes.toml  ci-non-rust-allowlist.toml  (+16 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+207 files in other folders)
